--- a/portal-impl/build.xml
+++ b/portal-impl/build.xml
@@ -358,6 +358,63 @@ public class Creole10Parser]]></replacevalue>
 		</java>
 	</target>
 
+	<target name="build-jodconverter-jar">
+		<get
+			dest="jodconverter-2.2.2.zip"
+			src="http://downloads.sourceforge.net/project/jodconverter/JODConverter/2.2.2/jodconverter-2.2.2.zip"
+		/>
+
+		<tstamp>
+			<format property="tstamp.value" pattern="yyyyMMddkkmmssSSS" />
+		</tstamp>
+
+		<unzip
+			dest="${tstamp.value}"
+			src="jodconverter-2.2.2.zip"
+		>
+			<patternset>
+				<include name="**/jodconverter-2.2.2.jar" />
+				<include name="**/jodconverter-2.2.2-sources.jar" />
+			</patternset>
+
+			<mapper type="flatten" />
+		</unzip>
+
+		<unzip
+			dest="${tstamp.value}"
+			src="${tstamp.value}/jodconverter-2.2.2-sources.jar"
+		>
+			<patternset>
+				<include name="**/OpenOfficeDocumentConverter.java" />
+			</patternset>
+		</unzip>
+
+		<delete file="jodconverter-2.2.2.zip" />
+
+		<patch
+			dir="${tstamp.value}"
+			patchfile="${project.dir}/lib/portal/jodconverter/LPS-36390.patch"
+			strip="1"
+		/>
+
+		<antcall target="compile-java">
+			<param name="javac.classpathref" value="project.classpath" />
+			<param name="javac.destdir" value="${tstamp.value}" />
+			<param name="javac.srcdir" value="${tstamp.value}" />
+		</antcall>
+
+		<copy
+			file="${tstamp.value}/jodconverter-2.2.2.jar"
+			tofile="${project.dir}/lib/portal/jodconverter.jar.new"
+		/>
+
+		<jar destfile="${project.dir}/lib/portal/jodconverter.jar.new" update="true">
+			<zipfileset dir="${tstamp.value}" includes="**/*.class" />
+		</jar>
+
+		<delete dir="${tstamp.value}" />
+	</target>
+
 	<target name="build-json-java-jar">
 		<get
 			dest="json-java.zip"
