LPS-79599 Simplify build.gradle to use only what's required

--- a/modules/core/portal-compat/blogs/portal-blogs-compat-test/build.gradle
+++ b/modules/core/portal-compat/blogs/portal-blogs-compat-test/build.gradle
@@ -1,24 +1,12 @@
 dependencies {
-	testCompile group: "easyconf", name: "easyconf", version: "0.9.5"
-	testCompile group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
-	testCompile project(":apps:collaboration:blogs:blogs-api")
-	testCompile project(":apps:collaboration:blogs:blogs-service")
-	testCompile project(":apps:collaboration:blogs:blogs-test-util")
-	testCompile project(":apps:collaboration:blogs:blogs-web")
-	testCompile project(":core:petra:petra-lang")
-
 	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "default"
 	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	testIntegrationCompile project(":apps:collaboration:blogs:blogs-api")
+	testIntegrationCompile project(":apps:collaboration:blogs:blogs-test-util")
 	testIntegrationCompile project(":apps:collaboration:message-boards:message-boards-api")
-	testIntegrationCompile project(":apps:collaboration:social:social-activity-test-util")
 	testIntegrationCompile project(":apps:collaboration:subscription:subscription-api")
 	testIntegrationCompile project(":apps:foundation:portal-search:portal-search-test-util")
-	testIntegrationCompile project(":apps:web-experience:asset:asset-api")
-	testIntegrationCompile project(":apps:web-experience:asset:asset-test-util")
-	testIntegrationCompile project(":apps:web-experience:export-import:export-import-api")
-	testIntegrationCompile project(":apps:web-experience:export-import:export-import-test-util")
 	testIntegrationCompile project(":apps:web-experience:trash:trash-api")
 	testIntegrationCompile project(":apps:web-experience:trash:trash-test-util")
-	testIntegrationCompile project(":core:registry-api")
 	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
