LPS-78797 Make the distinction between singular and plural

--- a/modules/apps/collaboration/reading-time/reading-time-web/src/main/resources/content/Language.properties
+++ b/modules/apps/collaboration/reading-time/reading-time-web/src/main/resources/content/Language.properties
@@ -1,4 +1,5 @@
 a-minute-read=A Minute Read
 less-than-a-minute-read=Less Than a Minute Read
-x-min={0} Minute(s)
+x-minute={0} Minute
+x-minutes={0} Minutes
 x-minutes-read={0} Minutes Read
